fixed spacing issue

--- a/style.css
+++ b/style.css
@@ -11,6 +11,10 @@ body{
   overflow-x: hidden;
 }
 
+section{
+  padding: 0 32px;
+}
+
 a{
   text-decoration: none;
   display: inline;
@@ -37,6 +41,7 @@ a{
 .nav__logo{
   display: flex;
   align-items: center;
+  margin: 8px 0;
 }
 
 .nav__logo--img{
